# FilterFilesMT

./: .gitignore  CMakeLists.txt  CMakePresets.json  FilterFilesMT.c  README.md  Test-Filter-Files.ps1  filter_files_mt.c  pattern_matching.c  pattern_matching.h
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
Tests/: test_main.c  test_queue.c  test_queue.h  test_utils.c  test_utils.h
Utils/: path_queue.c  path_queue.h  utils.c  utils.h
